Added comments in html file for mouseover.

--- a/Angular TRG/Day4/Assignment1/app.component.html
+++ b/Angular TRG/Day4/Assignment1/app.component.html
@@ -10,6 +10,8 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 
+<!-- For Mouseover Just Need to Change (click) with (mouseover) -->
+
   <div class="row">
     <div class="col-sm-2 mt-5 ml-5"> 
       <img src="../assets/list.png" width="100" height="100" (click)="show(1)">
