--- a/Angular TRG/Day1/Assignment1/emp.component.html
+++ b/Angular TRG/Day1/Assignment1/emp.component.html
@@ -1,4 +1,16 @@
-<table border="1px" style="width:500px">
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+
+<table border="2px" style="width:50%; margin-left: 25%; margin-top: 5%;" cellpadding="10">
     <thead>
         <th colspan="2">Employee Details</th>
     </thead>
